Fix viewer being too short for the last SeqBlock
- allow overflow-x to SeqBlocks
- fix for padding/height of the total seqViewer. BlockHeight sum was being used for viewer height, but there was extra padding being added in a style sheet. Expanded each Block's height (1.1x blockHeight) and removed the padding from the style sheet (fixes #46)

--- a/src/PartExplorer/SeqViewer/Linear/Linear.scss
+++ b/src/PartExplorer/SeqViewer/Linear/Linear.scss
@@ -15,7 +15,8 @@
 
   .la-vz-seq-block {
     width: 100%;
-    padding: 2px 0px;
+    padding: 0;
+    overflow: visible;
   }
 }
 
